# funasr-nano

./: .gitignore  README.md  config.yaml  const.py  data.json  demo1.py  export_encoder.py  funasr_infer.py  main.py  model.py  model_infer_only.py  model_test.py  pyproject.toml  test_adapter.py  test_encoder.py  test_llm.py
models/: ASREncoder.py  FunASRNano.py  SenseVoiceEncoderSmall.py  Transfomer.py
saved_tensors/: audio_adaptor_out.pt  encoder_out.pt  encoder_out_lens.pt  llm_inputs_embeds.pt  speech.pt  speech_lengths.pt
